--- a/careers/home/index.html
+++ b/careers/home/index.html
@@ -1,1 +1,56 @@
-<h1>home</h1>
+<!DOCTYPE>
+<html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+<link href="style.css" rel="stylesheet">
+
+<div id="topbanner" class="topbanner">
+	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home/"><img src="varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
+	<div id="topbannerright" class="topbannerright">
+		<a href="https://varna.ca/careers/future/"><div id="bannertext" class="bannertext">Future</div></a>
+		<a href="https://varna.ca/careers/education/"><div id="bannertext" class="bannertext">Education</div></a>
+		<a href="https://varna.ca/careers/skills/"><div id="bannertext" class="bannertext">Skills</div></a>
+		<a href="https://varna.ca/careers/aboutme/"><div id="bannertext" class="bannertext">About Me</div></a>
+		<a class="active" href="https://varna.ca/careers/home/"><div id="bannertext" class="bannertext">Home</div></a>
+	</div>
+</div>
+
+<div id="main" class="main">
+	<header>
+		<h2 style="font-size:5vw">Hello, my name is </h2>
+		<h1 style="font-size:8vw"><span style="background-color: #9EB179"><b>Varna Venkatesh</span></b></h1>
+	</header>
+
+	<body>
+		<br>
+		<br>
+		<hr>
+		<br>
+		<p1>I am a biomedical engineer looking to become a university professor.</p1>
+		<br>
+		<br>
+		<br>
+		<p1>Reach out to me through:</p1>
+		<ul>
+			<li><a href="https://ca.linkedin.com/" target="_blank"/ style=color:black;><p1>Linkedin</p1></a></li>
+			<li><a href="https://www.google.ca/search?sca_esv=b5d0d2a0b52daa42&q=cute+images+of+cats&udm=2&fbs=AEQNm0AeMNWKf4PpcKMI-eSa16lJoRPMIuyspCxWO6iZW9F1Ns6EVsgc0W_0xN47PHaanAEtg26fpfc9gg2y1-ZsywNNidIzOA0khSyMN51n7r3LlDC9M1NYStuTRDcBUYQ58dKt-Q6SigUS4Yne5yDHLg0vPBr98Nz98twIaNcnWiKaD4QuEh93Q53sB-UkWP9OcfO5KeatY98HR7cDW9ZTjFpZV7kJtA&sa=X&ved=2ahUKEwi_iKqk19iGAxUGhYkEHcZgA1kQtKgLegQIERAB&biw=1272&bih=572&dpr=1.5" target="_blank"/ style=color:black;><p1>Phone: (647) 111-2222</p1></a></li>
+			<li><a href="https://www.google.ca/search?sca_esv=b5d0d2a0b52daa42&q=cute+images+of+dogs&udm=2&fbs=AEQNm0AeMNWKf4PpcKMI-eSa16lJoRPMIuyspCxWO6iZW9F1Nu5UXlEfGU2YX1CrW9Nmm9Q3JIJZUqyMsLxos5tPU_UnYZfYuJgkiTORHgg7CrtBy2do69kQ9k88SD9fr3qxy8iaS2EsNa4ZuxhX52jKJIHFyYz2WFp1dhAM6krdZOPO-VPExa7wBd2MjXyu2Oms0XaJvfB1PDF7KJU--1YGOsvbTZfc-Q&sa=X&ved=2ahUKEwiJkKLS19iGAxWjLzQIHSjeDXsQtKgLegQIERAB&biw=1272&bih=572&dpr=1.5" target="_blank"/ style=color:black;><p1>Email: professionalemail@gmail.com</p1></a></li>
+			<li><a href="https://guthib.com/" target="_blank"/ style=color:black;><p1>Github: user-name</p1></a></li>
+		</ul>
+		<hr>
+		<br>
+		<p1>Learn more about my skills, education, and more!</p1>
+		<br>
+		<ul>
+			<li><a href="https://varna.ca/careers/aboutme/" style=color:black;><p1>About Me</p1></a></li>
+			<li><a href="https://varna.ca/careers/skills/" style=color:black;><p1>Skills</p1></a></li>
+			<li><a href="https://varna.ca/careers/education/" style=color:black;><p1>Education</p1></a></li>
+			<li><a href="https://varna.ca/careers/future/" style=color:black;><p1>Future</p1></a></li>
+		</ul>
+		<br>
+		<br>
+		<script type="text/javascript" src="script.js"></script>
+	</body>
+</div>
+</html>
