--- a/careers/education/index.html
+++ b/careers/education/index.html
@@ -1,1 +1,108 @@
+<!DOCTYPE>
+<html>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+<link href="style.css" rel="stylesheet">
+
+<div id="topbanner" class="topbanner">
+	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home/"><img src="varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
+	<div id="topbannerright" class="topbannerright">
+		<a href="https://varna.ca/careers/future/"><div id="bannertext" class="bannertext">Future</div></a>
+		<a class="active" href="https://varna.ca/careers/education/"><div id="bannertext" class="bannertext">Education</div></a>
+		<a href="https://varna.ca/careers/skills/"><div id="bannertext" class="bannertext">Skills</div></a>
+		<a href="https://varna.ca/careers/aboutme/"><div id="bannertext" class="bannertext">About Me</div></a>
+		<a href="https://varna.ca/careers/home/"><div id="bannertext" class="bannertext">Home</div></a>
+	</div>
+</div>
+
+<div id="main" class="main">
+	<center>
+		<h1 style="font-size:8vw"><span style="background-color: #9EB179"><b>My Education</b></span></h1>
+	</center>
+
+	<body>
+		<h3><span style="background-color: #9EB179"><b>High School</span></b></h3>
+		<br>
+		<p1><span style="background-color: #9EB179"><b>Grade 11:</b></span></p1>
+		<br>
+		<div id="indent" class="indent">
+			<p1>Mandatory: English (NBE3U1), AP Prep Functions (MCR3UE), Chemistry (SCH3U1), Physics (SPH3U1)</p1>
+			<br>
+			<br>
+			<p1>Electives:<br><span style="background-color: #9EB179"><b>Computer Science (ICS4U1)</b></span> - Learning how to program is an essential skills for engineers and I would submit it as my sixth U/M course<br><br><span style="background-color: #9EB179"><b>Guitar Music - Beginner (AMG3M6)</b></span> - An easier course to balance my intensive course load and I practise my ability to learn new skills and retain information<br><br><span style="background-color: #9EB179"><b>Instrumental Music - Band (AMI3M1) & Repertoire - Band (AMR3O1)</b></span> - Strategic option as I get a second credit while spending half the time in the class as compared to a normal class<br><br><span style="background-color: #9EB179"><b>Ancient Civilisations (CHW3M1)</b></span>x - This course is an opportunity to learn about historical thinking and inquiry process. I will also get to interpret and analyse evidence, which is applicable to my future</p1>
+		</div>
+		<br>
+		<br>
+		<br>
+		<hr>
+		<br>
+		<br>
+		<p1><span style="background-color: #9EB179"><b>Grade 12:</b></span></p1>
+		<br>
+		<div id="indent" class="indent">
+			<p1>Mandatory: AP Advanced Functions (MHF4UE), AP Calculus & Vectors (MCV4UE), AP Chemistry (SCH4UE), English (ENG4U1), and Physics (SPH4U1)</p1>
+			<br>
+			<br>
+			<p1>Electives:<br><span style="background-color: #9EB179"><b>Instrumental Music - Band (AMI4M1) & Repertoire (AMR4M1)</b></span> - Strategic option as I get a second credit while spending half the time in the class as compared to a normal class and I would receive the certificate for completing four years of music credits</p1>
+		</div>
+		<br>
+		<br>
+		<div id="image" class="image">
+			<img src="4yearplan.png" style="width:80vw;">
+		</div>
+		<p><i>My four year high school plan</i></p>
+	<br>
+	<br>
+	<br>
+	<hr>
+	<br>
+	<br>
+	<h3><span style="background-color: #9EB179"><b>University</span></b></h3>
+	<br>
+	<p1>I did a Bachelor of Applied Science (BASc) in Engineering Science (Biomedical Systems Engineering) at University of Toronto. I did the 4 year program without PEY Co-op (1 additional year). After this, I completed a Masters of Applied Science in Engineering and PhD with Dr. Name.
+	<br>
+	<br>
+	<p1><span style="background-color: #9EB179"><b>How did I get in?</b></span></p1>
+	<br>
+	<br>
+	<p1>I took 6 4U/M courses including Advanced Functions (MHF4U), Calculus & Vectors (MCV4U), Chemistry (SCH4U), English (ENG4U), Physics (SPH4U), and one additional U or M course.</p1>
+	<br>
+	<br>
+	<p1>I had to complete a supplemental application, which was an Online Student Profile. This included a list of my extracurricular activities. Then, I had to complete the Personal Profile, which consisted of one 250 word response in 10 minutes, one 2 minute video response with two minutes for preparation, and one 3 minute video response with three minutes for preparation.</p1>
+	<br>
+	<br>
+	<p1><span style="background-color: #9EB179"><b>What were some barriers that I faced?</b></span></p1>
+	<br>
+	<br>
+	<p1>Some barriers that I faced during my university experience include an intensive course load, difficult course material, limited internships and research positions, and limited Masters positions.</p1>
+	<br>
+	<br>
+	<p1><span style="background-color: #9EB179"><b>Intensive course load:</b></span> Engineering Science features 6 courses per semester, and they are fixed courses in Years 1 and 2. This means that I had to do a lot of different subjects in one semester and I had a lot of labs, assignments, and tests.</p1>
+	<br>
+	<br>
+	<p1>I overcame this by planning well and using strategies to help me succeed such as the Pomodoro Technique and time blocking. I took courses in the summer to reduce my workload in Years 2 to 4.</p1>
+	<br>
+	<br>
+	<p1><span style="background-color: #9EB179"><b>Difficult course material:</b></span> Engineering science has fixed courses in Years 1 and 2. In these courses, students explore a wide variety of subjects, such as quantum mechanics and material sciences. Due to the vast amount of material covered, I had to study very many difficult concepts.</p1>
+	<br>
+	<br>
+	<p1>I overcame this challenge by using different studying techniques to ensure that I understand all of the concepts. I used techniques such as spaced repetition and active recall. I also overcame this problem by effectively using my time and using techniques to help me focus like the Pomodoro Technique.</p1>
+	<br>
+	<br>
+	<p1><span style="background-color: #9EB179"><b>Getting internships and research positions:</b></span> Due to the large number of engineering students that are looking for internships and research opportunities, it can be hard to get a position during the summer.</p1>
+	<br>
+	<br>
+	<p1>I solved this problem by cold emailing professors in advance. This ensured that the professors had enough time to see my email, and that I was emailing earlier than other competitors. I also did this in the industry. I also arranged to meet with professors in the field that I was interested in, so that they knew of me and knew that I was interested in collaborating with them.</p1>
+	<br>
+	<br>
+	<p1><span style="background-color: #9EB179"><b>Getting a Masters position:</b></span> It can be difficult to procure a Masters position as the number of positions depends on the funding of the university and the professors. If the professor did not receive a lot of money, they would not be able to hire a lot of students.</p1>
+	<br>
+	<br>
+	<p1>To mitigate this problem, I made meaningful connections with my professors and professors in the field that I was interested in. This ensured that they knew who I am and were more inclined to choose me. I also participated in a variety of extracurriculars throughout my university career and achieved a high enough GPA to be on the Dean’s List. Additionally, I cold-emailed professors in addition to completing the application to show my interest. If I did not procure a Masters position, I had planned to work in the industry for a year and reapply. The advantage is that I would have a year of experience in the real world, which could improve my chances of receiving a position.</p1>
+	<br>
+	<br>
+	<script type="text/javascript" src="script.js"></script>
+	</body>
+</div>
+</html>
