--- a/careers/home/index.html
+++ b/careers/home/index.html
@@ -3,7 +3,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-<link href="https://varna.ca/careers/style.css" rel="stylesheet">
+<link href="https://varna.ca/careers/css" rel="stylesheet">
 
 <div id="topbanner" class="topbanner">
 	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home/"><img src="varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
