--- a/careers/education/index.html
+++ b/careers/education/index.html
@@ -49,7 +49,7 @@
 		<br>
 		<br>
 		<div id="image" class="image">
-			<img src="4yearplan.png" style="width:80vw;">
+			<img src="https://varna.ca/careers/4yearplan.png" style="width:80vw;">
 		</div>
 		<p><i>My four year high school plan</i></p>
 	<br>
