--- a/careers/home/index.html
+++ b/careers/home/index.html
@@ -6,7 +6,7 @@
 <link href="https://varna.ca/careers/css/style.css" rel="stylesheet">
 
 <div id="topbanner" class="topbanner"> 
-	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home/"><img src="https://varna.ca/careers/home/varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
+	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home"><img src="https://varna.ca/careers/home/varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
 	<div id="topbannerright" class="topbannerright">
 		<a href="https://varna.ca/careers/future/"><div id="bannertext" class="bannertext">Future</div></a>
 		<a href="https://varna.ca/careers/education/"><div id="bannertext" class="bannertext">Education</div></a>
@@ -50,7 +50,7 @@
 		</ul>
 		<br>
 		<br>
-		<script type="text/javascript" src="https://varna.ca/careers/javascript/"></script>
+		<script type="text/javascript" src="https://varna.ca/careers/javascript/script.js"></script>
 	</body>
 </div>
 </html>
