--- a/careers/education/index.html
+++ b/careers/education/index.html
@@ -5,8 +5,8 @@
  
 <link href="https://varna.ca/careers/css/style.css" rel="stylesheet">
 
-<div id="topbanner" class="topbanner">
-	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home/"><img src="varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
+<div id="topbanner" class="topbanner"> 
+	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home"><img src="https://varna.ca/careers/varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
 	<div id="topbannerright" class="topbannerright">
 		<a href="https://varna.ca/careers/future/"><div id="bannertext" class="bannertext">Future</div></a>
 		<a class="active" href="https://varna.ca/careers/education/"><div id="bannertext" class="bannertext">Education</div></a>
