--- a/careers/aboutme/index.html
+++ b/careers/aboutme/index.html
@@ -89,7 +89,7 @@
 		<p1><span style="background-color: #9EB179"><b>Visual:</b></span> As a visual learner, I would be well supported in my occupation. Most presenters use slides as a visual aid, and this would help engage my attention. When reading other research papers, I would encounter a variety of illustrations, such as graphs, that would help me understand and process the information.</p1>
 		<br>
 		<br>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="https://varna.ca/careers/javascript/script.js"></script>
 	</body>
 </div>
 </html>
