--- a/careers/education/index.html
+++ b/careers/education/index.html
@@ -102,7 +102,7 @@
 	<p1>To mitigate this problem, I made meaningful connections with my professors and professors in the field that I was interested in. This ensured that they knew who I am and were more inclined to choose me. I also participated in a variety of extracurriculars throughout my university career and achieved a high enough GPA to be on the Dean’s List. Additionally, I cold-emailed professors in addition to completing the application to show my interest. If I did not procure a Masters position, I had planned to work in the industry for a year and reapply. The advantage is that I would have a year of experience in the real world, which could improve my chances of receiving a position.</p1>
 	<br>
 	<br>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="https://varna.ca/careers/javascript/script.js"></script>
 	</body>
 </div>
 </html>
