--- a/careers/future/index.html
+++ b/careers/future/index.html
@@ -62,7 +62,7 @@
 
 		<br>
 		<br>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="https://varna.ca/careers/javascript/script.js"></script>
 	</body>
 </div>
 </html>
