--- a/careers/skills/index.html
+++ b/careers/skills/index.html
@@ -63,7 +63,7 @@
 		<p1><span style="background-color: #9EB179"><b>Writing:</b></span> Being a good writer is important for a biomedical engineering professor. One would have to write papers and complete grant and award applications. This requires a high level of grammar and writing proficiency. Additionally, communicating with others involves writing, which means that one must be a good writer.</p1>
 		<br>
 		<br>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="https://varna.ca/careers/javascript/script.js"></script>
 	</body>
 </div>
 </html>
