--- a/education.html
+++ b/education.html
@@ -6,13 +6,13 @@
 <link href="style.css" rel="stylesheet">
 
 <div id="topbanner" class="topbanner">
-	<th><span class="logo" id="logo"> <a href="https://varna.ca/careers/home/"><img src="varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
+	<th><span class="logo" id="logo"> <a href="https://varna.ca/home/"><img src="varnavenkatesh.png" style="height:11vh"alt="Varna Venkatesh"></a></span></th>
 	<div id="topbannerright" class="topbannerright">
-		<a href="https://varna.ca/careers/future/"><div id="bannertext" class="bannertext">Future</div></a>
-		<a class="active" href="https://varna.ca/careers/education/"><div id="bannertext" class="bannertext">Education</div></a>
-		<a href="https://varna.ca/careers/skills/"><div id="bannertext" class="bannertext">Skills</div></a>
-		<a href="https://varna.ca/careers/aboutme/"><div id="bannertext" class="bannertext">About Me</div></a>
-		<a href="https://varna.ca/careers/home/"><div id="bannertext" class="bannertext">Home</div></a>
+		<a href="https://varna.ca/future/"><div id="bannertext" class="bannertext">Future</div></a>
+		<a class="active" href="https://varna.ca/education/"><div id="bannertext" class="bannertext">Education</div></a>
+		<a href="https://varna.ca/skills/"><div id="bannertext" class="bannertext">Skills</div></a>
+		<a href="https://varna.ca/aboutme/"><div id="bannertext" class="bannertext">About Me</div></a>
+		<a href="https://varna.ca/home/"><div id="bannertext" class="bannertext">Home</div></a>
 	</div>
 </div>
 
